# the_changelog_ecosystem

./: .gitignore  .htmlvalidate.json  .htmlvalidateignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Justfile  Makefile  README.md  discover_tools.py  gather_metadata.py  generate_pages.py  generate_review_stubs.py  mkdocs.yml  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  sync_gha_actions.py  top_prio_tools.toml
.github/workflows/: deploy-pages.yml
content/articles/: auto-changelog.md  cargo-dist.md  cargo-release.md  cargo-release.v2.md  cargo-smart-release.md  cargo-smart-release.v2.md  change-taxonomies-across-tools.md  changelog-file-schemas.md  changelog-from-release.md  changelog-generator.md  changelog-generator.v2.md  changelog-rendering-template-engines.md  changelog-rs.md  changelog-validation-boundaries.md  changelogithub.md  changesets-action.md  changesets-changelog-github.md  changesets.md  changie.md  com-diffplug-spotless-changelog.md  com-diffplug-spotless-changelog.v2.md  commit-and-tag-version.md  commit-and-tag-version.v2.md  conventional-changelog-action.md  conventional-changelog-cli.md  conventional-changelog-cli.v2.md  conventional-changelog.md  conventional-commits-trailers-release-notes.md  create-release-notes-from-changelog.md  docs-integration-boundaries.md  dotnet-releaser.md  git-changelog-maven-plugin.md  git-changelog-maven-plugin.v2.md  git-chglog.md  git-cliff.md  (+55 more)
content_old/: cargo-dist.v2.md  changelog-rs.v2.md  changesets.v2.md  changie.v2.md  dotnet-releaser.v2.md  git-chglog.v2.md  gitreleasemanager.v2.md  gitreleasenotes.v2.md  gitversion.v2.md  goreleaser.v2.md  keepachangelog-manager.v2.md  keepachangelog.v2.md  logchange.v2.md  maven-changelog-plugin.v2.md  nerdbank-gitversioning.v2.md  net-wooga-github-release-notes.v2.md  release-please.v2.md  semantic-release.v2.md
data/: tool_ratings.csv  tools.json
examples/: README.md
examples/cross/release-please/app/: pyproject.toml
examples/cross/release-please/app/tipcalc/: __init__.py
examples/python/keepachangelog/app/: pyproject.toml
examples/rust/cargo-release/app/: Cargo.toml
examples/rust/cargo-release/app/src/: main.rs
pipeline/: http_cache.py  tool_store.py
rtd/: adding-tools.md  index.md  maintainer-guide.md  publishing.md  quality-gates.md
scripts/: check_a11y.mjs  check_browser_support.mjs  check_links.py  check_pelican_artifacts.py  rewrite_history.py
spec/: experiments.md  final_tasks.md  gha_integration_plan.md  so_many_gha.md  spec.md  stubs_todo.md  task_in_repo_ecosystem.md
(+260 files in other folders)
