[project]
name = "the-changelog-ecosystem"
version = "0.1.0"
description = "A review site for changelog and release management tools across ecosystems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pelican>=4.12.0",
    "markdown>=3.10.2",
    "invoke>=3.0.3",
    "requests>=2.32.0",
    "tomli>=2.2.0",
]

[dependency-groups]
dev = []

[tool.uv]

[tool.uv.pip]
universal = true
