[project]
name = "tipcalc"
version = "1.0.0"
description = "Restaurant tip calculator — fixture app for changelog tool experiments"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tipcalc = "tipcalc.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# NOTE: This is the v1.0.0 starting point. run_experiment.sh bumps `version`
# to 2.0.0 then 3.0.0 as it walks the life cycle. Tool config (e.g.
# [tool.towncrier]) is appended here from scenario/ by the per-tool setup.
