[package]
name = "tipcalc"
version = "1.0.0"
edition = "2021"
description = "Restaurant tip calculator — fixture app for changelog tool experiments"

# cargo-release configuration lives here (or in release.toml)
[package.metadata.release]
# Use git-cliff to update CHANGELOG.md before release
pre-release-hook = ["git", "cliff", "--tag", "{{version}}", "-o", "CHANGELOG.md"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]
tag-name = "v{{version}}"
push = false
publish = false
